Refactor localStorage to storage abstraction
Refactor localStorage usage to a storage abstraction for better compatibility and fallback handling. Update functions to use the new storage methods for managing production orders and product templates.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Sistema de Ordem de Produção - Embalagens</title>
-    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=iAUhGQDHpk8lYwAM5-BFH1vHli7JCRKOBf7dAfnULm4HDFEcFdhMv_Ft4fW8dh6ccecNDvsoTmmhDhvDHTilxWeMEO4ap8Lusdr71RM6IpMmMEA8I5x18HVpe2grdJveMVilWm0zsdjekn367_znLdMw5Bp6RH-bx1N-xvlaxJCnpJ5rW16HJfh1oDlVvNj_92Y2GqJincGSEBkHvOTSNJTqqf7QyNYW6xJir7_qlZl1zfVtXiGOZRK4X68Z1-DFirA63iXofwhGBfIs6S13pSbxMlI2ylUqDUXG41pTkILDIdV60rXIMWbeIfLOQpKm3lkmfuMjGgnd4WVkUCzqoo2O1wcf_b9YXQY2ojxvu4fOwg_SUudT54svZgXaTxsZLJi9e4d4D5RGP1RrERqdPwPTTNFNPgygwKnbON_L7uC7BKUTvHmfjh7MwcDCU4vGMlvCTMJa2T0PKs5FNjivpTZS0LeydR5TK0k2-7BdQuPPFPBtJvz0J4AvLNMLjVJXhTIX0hHthAs8sB_4rzupsP5pf5bQIF_oznCBvA7BYAPNXOYSCw20ZB1GGPk-t8jq2aXmnFf0X6lZIGgyjyTC7tNz6NAG_dnAcalHxV9LGO2bnjsg2qkGTl9oBNOAcOFXbSnMrmrroL7rEzQXwRcJgzCW3ZCk5ky48RSexP8R4oda0kvSBf5ldHxO_xXxXK1bmmnB_rz0XVqYtFydc4j9eGjLvASSQyv4Jlm-DRArlXxuPX4-I-TheOF6l1KTvdXkRPj9xVNCYA1c9D-uiuxSKBtyCXnadh46ZdpyMu91Ou92GpNT6lxcSl27_NeZC4_UGTCqiY5BnZBkTVywzyL-jxFhXP7R91-UJ0C3TH2wmBQIvVyT3pHC18qNRe4QE7-1rn191DlRQ-5dM8IjPZyqfN9dWWSBJ_LuaaFza_KL1EjSoSrxtxC8GjRjWivDfRah1LaTZKJbgutNyDB0RYnjl23CJlBKtLZ2wM18JGhVvlVsBIJTg2OmhrnBjnk2epjKHIYfeUpymF9z-WppskJg5J9zN92M0b15f9u6c3C8kl6H56biubRO9MYaDEOUpTDu1Q_BVkp0FMzveFsGcvb4Ixj-01BWFqgIM7DbbMrGGrwXKBKZG73a33eKhik66mjl2ppTwZizUJpst129h1c1c6TIc2OAKaLEwrDh6bCPC1YMP10SEroJYbp-pT7f9MIL83JBC23iRVIabFgGSzZSfw786EsMF9yPB-IVJbY9biHe3sHb6uvWYnnaU-3BcYUcwDwE9hgD88LCPrI36N9Doeum-JJyA6IcLNPSK17Q5e1eMXbNcoUlnXAXfZSPi_8cAtA0aCK9Ndv7A6pfPhEBwfwVvEdMzw5m5VSkd4SH3FKY2kYRYBml9OJ5MzTh297gvIijaK6GDP7rrlDhjQzqMuCv2-rNnChF8mt_AR60fe1hsNjEL09i3aZ45XYitmc8cKh4OMwYmv9RhsjZnok7iEqNVtTlMZzMge2fVGB7yXPKB-DGbOJ3Ui2JXbaIl5vVasGwKOrj6vsA1SDkbbpqIVacwmsOoZVl1XM2CWszouzfnytnU-SoBrLoyuO3CNdLK1MEzm09fJwzGxam4wLwXHJJvJv8DjW712csyDnN_89UV3TpYstSEgFwSeHcA1pcI9jMO47ktsDjocrDbh4CnmaprNrVS39XxngWAVcwMKesS5tGMHqpNuZWndO_QfmMjcfXqWX7fdTl0zdEPv1hwJ-VeEmOu1Kpie4lD6DHjYb-jGbR4-EJlSRM-frv0RqFID7gEiRT1UBHsrKt9LCXKSHHyskPYX26G8t36N99PMBwcw2gGwJJGaYatTfUq5_k1n2ePDl3l1k9sa3NGy7nRtQmaUgSVnPIoJ3dkuMo_IKoGvqLZnt3TMVnZhpQ-T2fVIggkP2FL-NLzme5CxWhHoIGKb7Ax7DzIi8pAT4omxS6mTIt9NzCqPFjKVeB-8J0tI64KvE-hZ6cyVlS7EZOJj7ibk3wMoktVlAYZjcD3vsrH8Zo8L_JEsHU26q45oytB8AY617tGsy0iN3nrlSqoMBuuXT3_5Q2_PuEdV_KrVsKsD-B4EWnoocN_yLiKqvLCoHJ1vnkQLVHfI39DNWe0pQ8Tir87irsE5ftYYK6MrSv0rkOPnfAJEE9RaUB9yGFLMHMI8PsCrcLCNh3R7_5Rk2v8PIRXK5VDgfJfg43Gn1vfrTzbfXcUmpmm3PSmm-BCYpPwZbBmKtCVmdnsh_dq5yTRYm2POhB5hIJXDbC-inBUjZguGUAUPIJ-Hq8kqpU5VVZre-vJyiv8FLhJC34i2FPymnW9ZQuAw3KoWxjBFgaCVwBWHElCBPAV5spY5Pb" charset="UTF-8"></script>
-    <style>
+<style>
         *{margin:0;padding:0;box-sizing:border-box}
         body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);min-height:100vh;color:#333}
         .container{max-width:1400px;margin:0 auto;padding:20px}
@@ -542,9 +541,41 @@
     <div id="notification" class="notification"></div>
 
     <script>
-        let orders = JSON.parse(localStorage.getItem('productionOrders')) || [];
-        let orderIdCounter = parseInt(localStorage.getItem('orderIdCounter')) || 1;
-        let productTemplates = JSON.parse(localStorage.getItem('productTemplates')) || [];
+        
+// Storage com fallback para iOS/Android (Private Mode, restrições, etc.)
+const storage = (function(){
+    try {
+        const testKey = '__t__';
+        localStorage.setItem(testKey, '1');
+        localStorage.removeItem(testKey);
+        return localStorage;
+    } catch (e) {
+        // Fallback em memória
+        const mem = {};
+        return {
+            getItem: (k) => (k in mem ? mem[k] : null),
+            setItem: (k, v) => { mem[k] = String(v); },
+            removeItem: (k) => { delete mem[k]; }
+        };
+    }
+})();
+
+function getJSON(key, fallback){
+    try {
+        const v = storage.getItem(key);
+        return v ? JSON.parse(v) : fallback;
+    } catch(e){
+        return fallback;
+    }
+}
+function setJSON(key, value){
+    try { storage.setItem(key, JSON.stringify(value)); } catch(e){}
+}
+
+let orders = getJSON('productionOrders', []);
+let orderIdCounter = parseInt(storage.getItem('orderIdCounter')) || 1;
+let productTemplates = getJSON('productTemplates', []);
+
         let isEditing = false;
         let selectedTemplate = null;
         let viewMode = localStorage.getItem('ordersViewMode') || 'detailed'; // 'list' | 'detailed'
@@ -558,7 +589,7 @@
         }
 
         function showNotification(message,type='success'){const n=document.getElementById('notification');n.textContent=message;n.className=`notification ${type}`;n.classList.add('show');setTimeout(()=>n.classList.remove('show'),3000);}
-        function generateOrderId(){const id=orderIdCounter;orderIdCounter++;localStorage.setItem('orderIdCounter',orderIdCounter);return `OP-${String(id).padStart(4,'0')}`;}
+        function generateOrderId(){const id=orderIdCounter;orderIdCounter++;storage.setItem('orderIdCounter', orderIdCounter);return `OP-${String(id).padStart(4,'0')}`;}
         function updateStats(){const total=orders.length;const emAndamento=orders.filter(o=>o.status==='Em Andamento').length;const finalizadas=orders.filter(o=>o.status==='Finalizado').length;const unicos=new Set(orders.map(o=>o.nomeTemplate)).size;document.getElementById('totalOrders').textContent=total;document.getElementById('inProgressOrders').textContent=emAndamento;document.getElementById('completedOrders').textContent=finalizadas;document.getElementById('totalProducts').textContent=unicos;}
 
         function showProductHistory(){
@@ -596,7 +627,7 @@
             const idx=productTemplates.findIndex(x=>x.nomeTemplate===nome);
             if(idx!==-1){if(confirm(`Já existe um modelo com o nome "${nome}". Deseja atualizar?`)){productTemplates[idx]={...t,vezesCriado:productTemplates[idx].vezesCriado+1};showNotification(`Modelo "${nome}" atualizado!`,'success');}}
             else{productTemplates.push(t);showNotification(`Modelo "${nome}" salvo no histórico!`,'success');}
-            localStorage.setItem('productTemplates',JSON.stringify(productTemplates));
+            setJSON('productTemplates', productTemplates);
         }
 
         function manageTemplates(){
@@ -625,7 +656,7 @@
             document.getElementById('templatesModal').style.display='block';
         }
         function useTemplate(i){fillFormWithTemplate(productTemplates[i]);closeTemplatesModal();showNotification(`Modelo "${productTemplates[i].nomeTemplate}" carregado!`,'success');}
-        function deleteTemplate(i){const t=productTemplates[i];if(confirm(`Tem certeza que deseja excluir o modelo "${t.nomeTemplate}"?`)){productTemplates.splice(i,1);localStorage.setItem('productTemplates',JSON.stringify(productTemplates));manageTemplates();showNotification(`Modelo "${t.nomeTemplate}" excluído!`,'info');}}
+        function deleteTemplate(i){const t=productTemplates[i];if(confirm(`Tem certeza que deseja excluir o modelo "${t.nomeTemplate}"?`)){productTemplates.splice(i,1);setJSON('productTemplates', productTemplates);manageTemplates();showNotification(`Modelo "${t.nomeTemplate}" excluído!`,'info');}}
         function closeTemplatesModal(){document.getElementById('templatesModal').style.display='none';}
 
         function imageToBase64(file,cb){const r=new FileReader();r.onload=e=>cb(e.target.result);r.readAsDataURL(file);}
@@ -667,7 +698,7 @@
                 imagemArte:null
             };
             let processed=0;const total=(imgF?1:0)+(imgA?1:0);
-            function saveOrder(){orders.push(order);localStorage.setItem('productionOrders',JSON.stringify(orders));saveAsTemplate();displayOrders();updateStats();document.getElementById('orderForm').reset();document.getElementById('previewFaca').style.display='none';document.getElementById('previewArte').style.display='none';clearSelection();showNotification('✅ Ordem de produção criada com sucesso!','success');}
+            function saveOrder(){orders.push(order);setJSON('productionOrders', orders);saveAsTemplate();displayOrders();updateStats();document.getElementById('orderForm').reset();document.getElementById('previewFaca').style.display='none';document.getElementById('previewArte').style.display='none';clearSelection();showNotification('✅ Ordem de produção criada com sucesso!','success');}
             if(total===0){saveOrder();return;}
             if(imgF){imageToBase64(imgF,b64=>{order.imagemFaca=b64;processed++;if(processed===total)saveOrder();});}
             if(imgA){imageToBase64(imgA,b64=>{order.imagemArte=b64;processed++;if(processed===total)saveOrder();});}
@@ -701,7 +732,7 @@
             order.lastModified=new Date().toLocaleDateString('pt-BR')+' às '+new Date().toLocaleTimeString('pt-BR');
 
             let processed=0;const total=(imgF?1:0)+(imgA?1:0);
-            function finish(){orders[idx]=order;localStorage.setItem('productionOrders',JSON.stringify(orders));displayOrders();updateStats();closeEditModal();showNotification(`✅ Ordem ${id} atualizada com sucesso!`,'success');}
+            function finish(){orders[idx]=order;setJSON('productionOrders', orders);displayOrders();updateStats();closeEditModal();showNotification(`✅ Ordem ${id} atualizada com sucesso!`,'success');}
             if(total===0){finish();return;}
             if(imgF){imageToBase64(imgF,b64=>{order.imagemFaca=b64;processed++;if(processed===total)finish();});}
             if(imgA){imageToBase64(imgA,b64=>{order.imagemArte=b64;processed++;if(processed===total)finish();});}
@@ -880,7 +911,7 @@
             if(order&&order.currentStep<4){
                 order.currentStep++;
                 if(order.currentStep===4){order.status='Finalizado';}
-                localStorage.setItem('productionOrders',JSON.stringify(orders));
+                setJSON('productionOrders', orders);
                 displayOrders();updateStats();
                 showNotification(`Ordem ${orderId} avançou para a próxima etapa!`,'success');
             }
@@ -888,7 +919,7 @@
         function deleteOrder(orderId){
             if(confirm('Tem certeza que deseja excluir esta ordem de produção?')){
                 orders=orders.filter(o=>o.id!==orderId);
-                localStorage.setItem('productionOrders',JSON.stringify(orders));
+                setJSON('productionOrders', orders);
                 displayOrders();updateStats();
                 showNotification(`Ordem ${orderId} excluída com sucesso!`,'info');
             }
@@ -990,10 +1021,10 @@
                     const imported=JSON.parse(e.target.result);
                     if(imported.orders&&Array.isArray(imported.orders)){
                         orders=imported.orders;
-                        if(imported.productTemplates&&Array.isArray(imported.productTemplates)){productTemplates=imported.productTemplates;localStorage.setItem('productTemplates',JSON.stringify(productTemplates));}
-                        localStorage.setItem('productionOrders',JSON.stringify(orders));displayOrders();updateStats();showNotification('Dados importados com sucesso!','success');
+                        if(imported.productTemplates&&Array.isArray(imported.productTemplates)){productTemplates=imported.productTemplates;setJSON('productTemplates', productTemplates);}
+                        setJSON('productionOrders', orders);displayOrders();updateStats();showNotification('Dados importados com sucesso!','success');
                     }else if(Array.isArray(imported)){
-                        orders=imported;localStorage.setItem('productionOrders',JSON.stringify(orders));displayOrders();updateStats();showNotification('Dados importados com sucesso!','success');
+                        orders=imported;setJSON('productionOrders', orders);displayOrders();updateStats();showNotification('Dados importados com sucesso!','success');
                     }else{throw new Error('Formato inválido');}
                 }catch(err){showNotification('Erro ao importar dados. Verifique o formato do arquivo.','error');}
             };
@@ -1024,7 +1055,7 @@
         }
 
         // Auto-salvar
-        setInterval(()=>{if(orders.length>0)localStorage.setItem('productionOrders',JSON.stringify(orders));if(productTemplates.length>0)localStorage.setItem('productTemplates',JSON.stringify(productTemplates));},30000);
+        setInterval(()=>{if(orders.length>0)setJSON('productionOrders', orders);if(productTemplates.length>0)setJSON('productTemplates', productTemplates);},30000);
 
         // Listeners de impressão
         window.addEventListener('beforeprint',function(){const pc=document.getElementById('printContent');if(pc){pc.style.display='block !important';pc.style.visibility='visible !important';}});
