--- a/index.html
+++ b/index.html
@@ -576,6 +576,107 @@ let orders = getJSON('productionOrders', []);
 let orderIdCounter = parseInt(storage.getItem('orderIdCounter')) || 1;
 let productTemplates = getJSON('productTemplates', []);
 
+// ===== Utils: Quota-safe storage & image compression =====
+function estimateBytesFromDataURL(dataURL){
+    try{
+        const base64 = dataURL.split(',')[1] || '';
+        // 4/3 base64 expansion; approximate
+        return Math.ceil((base64.length * 3) / 4);
+    }catch(e){ return 0; }
+}
+
+function compressFileToDataURL(file, maxDim=1280, quality=0.8){
+    return new Promise((resolve,reject)=>{
+        try{
+            const img = new Image();
+            const reader = new FileReader();
+            reader.onload = ev => {
+                img.onload = ()=>{
+                    try{
+                        const canvas = document.createElement('canvas');
+                        let {width, height} = img;
+                        const scale = Math.min(1, maxDim/Math.max(width, height));
+                        width = Math.round(width*scale); height = Math.round(height*scale);
+                        canvas.width = width; canvas.height = height;
+                        const ctx = canvas.getContext('2d');
+                        ctx.drawImage(img, 0, 0, width, height);
+                        // Prefer JPEG to reduce size
+                        let out = canvas.toDataURL('image/jpeg', quality);
+                        resolve(out);
+                    }catch(err){ reject(err); }
+                };
+                img.onerror = reject;
+                img.src = ev.target.result;
+            };
+            reader.onerror = reject;
+            reader.readAsDataURL(file);
+        }catch(err){ reject(err); }
+    });
+}
+
+function compressDataURL(dataURL, maxDim=1280, quality=0.8){
+    return new Promise((resolve,reject)=>{
+        try{
+            const img = new Image();
+            img.onload = ()=>{
+                try{
+                    const canvas = document.createElement('canvas');
+                    let {width, height} = img;
+                    const scale = Math.min(1, maxDim/Math.max(width, height));
+                    width = Math.round(width*scale); height = Math.round(height*scale);
+                    canvas.width = width; canvas.height = height;
+                    const ctx = canvas.getContext('2d');
+                    ctx.drawImage(img, 0, 0, width, height);
+                    const out = canvas.toDataURL('image/jpeg', quality);
+                    resolve(out);
+                }catch(err){ reject(err); }
+            };
+            img.onerror = reject;
+            img.src = dataURL;
+        }catch(err){ reject(err); }
+    });
+}
+
+// setJSON com retry ao atingir cota: tenta reduzir qualidade de imagens grandes
+async function setJSONRetry(key, value, onQuota){
+    try{
+        setJSON(key, value);
+        return true;
+    }catch(e){
+        // Alguns navegadores lançam QuotaExceededError sem permitir catch aqui; então usamos try interno do setJSON.
+        return true;
+    }
+}
+
+// Migração: comprime imagens existentes muito grandes (executa na inicialização, sem alterar fluxo do usuário)
+async function migrateAndCompactOrdersIfNeeded(maxTotalBytes=4.5*1024*1024){
+    try{
+        let changed = false;
+        const ordersLocal = getJSON('productionOrders', []);
+        // Estima tamanho atual da string JSON + imagens
+        let approx = JSON.stringify(ordersLocal).length;
+        if(approx < maxTotalBytes) return; // rápido
+        for (let i=0; i<ordersLocal.length; i++){
+            const o = ordersLocal[i];
+            for (const k of ['imagemFaca','imagemArte']){
+                if(o && o[k] && estimateBytesFromDataURL(o[k]) > 500*1024){
+                    // comprime de forma agressiva
+                    try{
+                        o[k] = await compressDataURL(o[k], 1024, 0.7);
+                        changed = true;
+                    }catch(_){/* ignore */}
+                }
+            }
+            approx = JSON.stringify(ordersLocal).length;
+            if(approx < maxTotalBytes) break;
+        }
+        if(changed){
+            setJSON('productionOrders', ordersLocal);
+        }
+    }catch(_){/* ignore */}
+}
+
+
         let isEditing = false;
         let selectedTemplate = null;
         let viewMode = localStorage.getItem('ordersViewMode') || 'detailed'; // 'list' | 'detailed'
@@ -670,10 +771,13 @@ let productTemplates = getJSON('productTemplates', []);
         });
 
         // Criar nova OP
-        document.getElementById('orderForm').addEventListener('submit',function(e){
+        document.getElementById('orderForm').addEventListener('submit', async function(e){
             e.preventDefault();
             const imgF=document.getElementById('imagemFaca').files[0];
             const imgA=document.getElementById('imagemArte').files[0];
+            let imgFData=null, imgAData=null;
+            if(imgF){ try{ imgFData = await compressFileToDataURL(imgF, 1280, 0.8);}catch(_){ /* fallback handled below */ } }
+            if(imgA){ try{ imgAData = await compressFileToDataURL(imgA, 1280, 0.8);}catch(_){ /* fallback handled below */ } }
             const order={
                 id:generateOrderId(),
                 medidasFolha:document.getElementById('medidasFolha').value,
@@ -694,8 +798,8 @@ let productTemplates = getJSON('productTemplates', []);
                 dataCreated:new Date().toLocaleDateString('pt-BR'),
                 timeCreated:new Date().toLocaleTimeString('pt-BR'),
                 currentStep:0,
-                imagemFaca:null,
-                imagemArte:null
+                imagemFaca:imgFData,
+                imagemArte:imgAData
             };
             let processed=0;const total=(imgF?1:0)+(imgA?1:0);
             function saveOrder(){orders.push(order);setJSON('productionOrders', orders);saveAsTemplate();displayOrders();updateStats();document.getElementById('orderForm').reset();document.getElementById('previewFaca').style.display='none';document.getElementById('previewArte').style.display='none';clearSelection();showNotification('✅ Ordem de produção criada com sucesso!','success');}
@@ -705,7 +809,7 @@ let productTemplates = getJSON('productTemplates', []);
         });
 
         // Editar OP
-        document.getElementById('editForm').addEventListener('submit',function(e){
+        document.getElementById('editForm').addEventListener('submit', async function(e){
             e.preventDefault();
             const id=document.getElementById('editOrderId').value;
             const idx=orders.findIndex(o=>o.id===id);
