Update label text for printing dimensions

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="medidasFolha">Medidas da Folha Inteira</label>
+                            <label for="medidasFolha">Medidas da Folha de Impressão</label>
                             <input type="text" id="medidasFolha" placeholder="Ex: 70x100cm" required>
                         </div>
                         <div class="form-group">
@@ -409,7 +409,7 @@
 
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="editMedidasFolha">Medidas da Folha Inteira</label>
+                            <label for="editMedidasFolha">Medidas da Folha de Impressão</label>
                             <input type="text" id="editMedidasFolha" placeholder="Ex: 70x100cm" required>
                         </div>
                         <div class="form-group">
