--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="formato">FORMATO</label>
-                                <input type="text" id="formato" placeholder="Ex: Tampa e Base, Gaveta, Sacola, etc.">
+                                <input type="text" id="formato" placeholder="">
                             </div>
                             <div class="form-group">
                                 <label for="codigoFaca">Código da Faca</label>
