--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             .current-image-preview{max-width:150px;max-height:150px;border-radius:8px;margin:10px 0;border:2px solid #ddd}
 
             @media print{
-                @page{size:A4 portrait;margin:10mm}
+                @page{size:A4 portrait;margin:8mm}
                 *{-webkit-print-color-adjust:exact !important;color-adjust:exact !important;print-color-adjust:exact !important}
                 body{background:#fff !important}
                 .container,.header,.stats-row,.main-content,.orders-list,.modal-content>div:last-child{display:none !important}
@@ -203,15 +203,15 @@
                 /* Mostrar apenas o modal de impressão individual */
                 #printModal{display:block !important;position:static !important;background:#fff !important;width:100% !important;height:auto !important}
                 #printModal .modal-content{margin:0 !important;padding:0 !important;width:100% !important;max-width:100% !important;max-height:none !important;background:#fff !important;box-shadow:none !important;border-radius:0 !important}
-                #printModal .print-preview{display:block !important;visibility:visible !important;padding:10px !important;margin:0 !important;background:#fff !important;box-shadow:none !important;border-radius:0 !important}
-                .print-header h1,.print-header h2,.print-header p{color:#000 !important;margin:4px 0 !important}
+                #printModal .print-preview{display:block !important;visibility:visible !important;padding:5px !important;margin:0 !important;background:#fff !important;box-shadow:none !important;border-radius:0 !important}
+                .print-header h1,.print-header h2,.print-header p{color:#000 !important;margin:3px 0 !important}
                 #printModal .print-preview,#printModal .print-preview *{break-inside:avoid-page !important;page-break-inside:avoid !important}
-                #printModal .print-preview{font-size:13px !important;line-height:1.35 !important}
-                #printModal .print-images img{max-height:220px !important}
-                #printModal .print-images{gap:10px !important;margin:10px 0 !important}
+                #printModal .print-preview{font-size:12px !important;line-height:1.3 !important}
+                #printModal .print-images img{max-height:400px !important;max-width:100% !important}
+                #printModal .print-images{gap:15px !important;margin:15px 0 !important}
                 .close{display:none !important}
-                #printModal .print-preview table{border-collapse:collapse !important;width:100% !important}
-                #printModal .print-preview td{border-bottom:1px solid #ddd !important;padding:6px 0 !important}
+                #printModal .print-preview table{border-collapse:collapse !important;width:100% !important;max-width:600px !important;margin:0 auto !important}
+                #printModal .print-preview td{border-bottom:1px solid #ddd !important;padding:5px 0 !important}
             }
 
             @media (max-width:768px){
@@ -1523,7 +1523,7 @@
                 
                 setValueSafely('editOrderId', order.id);
                 setValueSafely('editMedidasFolha', order.medidasFolha);
-                setValueSafely('editQuantidade', order.quantidade);
+                setValueSafely('editQuantidade', order.quantidadeImpressao);
                 setValueSafely('editFornecedor', order.fornecedor);
                 setValueSafely('editStatus', order.status);
                 setValueSafely('editTipoPapel', order.tipoPapel);
@@ -1879,56 +1879,26 @@
                         ${order.lastModified?`<p style="color:#e67e22;margin:2px 0;font-size:12px;">Última edição: ${order.lastModified}</p>`:''}
                     </div>
 
-                    <div style="display:grid;grid-template-columns:1fr 1fr;gap:12px;margin:8px 0;">
-                        <div>
-                            <h3 style="color:#2c3e50;margin-bottom:8px;font-size:14px;">📏 Especificações</h3>
-                            <table style="width:100%;border-collapse:collapse;">
-                                <tr style="border-bottom:1px solid #ddd;"><td style="padding:6px 0;font-weight:bold;color:#333;">Formato:</td><td style="padding:6px 0;color:#333;">${order.formato||'-'}</td></tr>
-                                <tr style="border-bottom:1px solid #ddd;"><td style="padding:6px 0;font-weight:bold;color:#333;">Código da Faca:</td><td style="padding:6px 0;color:#333;">${order.codigoFaca||'-'}</td></tr>
-                                <tr style="border-bottom:1px solid #ddd;"><td style="padding:6px 0;font-weight:bold;color:#333;">Medidas da Folha Impressa:</td><td style="padding:6px 0;color:#333;">${order.medidasFolha}</td></tr>
-                                <tr style="border-bottom:1px solid #ddd;"><td style="padding:6px 0;font-weight:bold;color:#333;">Quantidade:</td><td style="padding:6px 0;color:#333;">${parseInt(order.quantidade).toLocaleString()}</td></tr>
-                                ${order.folhasResma?`<tr style="border-bottom:1px solid #ddd;"><td style="padding:6px 0;font-weight:bold;color:#333;">Folhas/Resma:</td><td style="padding:6px 0;color:#333;">${order.folhasResma}</td></tr>`:''}
-                                <tr style="border-bottom:1px solid #ddd;"><td style="padding:6px 0;font-weight:bold;color:#333;">Tipo de Papel:</td><td style="padding:6px 0;color:#333;">${order.tipoPapel}</td></tr>
-                                <tr style="border-bottom:1px solid #ddd;"><td style="padding:6px 0;font-weight:bold;color:#333;">Gramatura:</td><td style="padding:6px 0;color:#333;">${order.gramatura}</td></tr>
-                                ${order.resmasUsadas?`<tr style="border-bottom:1px solid #ddd;"><td style="padding:6px 0;font-weight:bold;color:#333;">Resmas utilizadas:</td><td style="padding:6px 0;color:#333;">${order.resmasUsadas}</td></tr>`:''}
-                                <tr style="border-bottom:1px solid #ddd;"><td style="padding:6px 0;font-weight:bold;color:#333;">Impressão:</td><td style="padding:6px 0;color:#333;">${order.impressao}</td></tr>
-                                ${order.fornecedor?`<tr style="border-bottom:1px solid #ddd;"><td style="padding:6px 0;font-weight:bold;color:#333;">Gráfica:</td><td style="padding:6px 0;color:#333;">🏢 ${order.fornecedor}</td></tr>`:''}
-                                ${order.enviadoFaca||order.enviadoChapa||order.enviadoImpressao?`
-                                    <tr style="border-bottom:1px solid #ddd;">
-                                        <td style="padding:6px 0;font-weight:bold;color:#333;">Pré-produção:</td>
-                                        <td style="padding:6px 0;color:#333;">
-                                            ${order.enviadoFaca?'• Enviado p/ faca&nbsp;&nbsp;':''}
-                                            ${order.enviadoChapa?'• Gravar chapa&nbsp;&nbsp;':''}
-                                            ${order.enviadoImpressao?'• Impressão':''}
-                                        </td>
-                                    </tr>
-                                `:''}
-                            </table>
-                        </div>
-
-                        ${order.imagemFaca||order.imagemArte?`
-                        <div>
-                            <h3 style="color:#2c3e50;margin-bottom:8px;font-size:14px;">🖼️ Imagens</h3>
-                            <div class="print-images" style="grid-template-columns:1fr 1fr;gap:10px;margin:0;">
-                                ${order.imagemFaca?`<div class="print-image" style="text-align:center;"><div style="font-size:12px;margin-bottom:4px;">🔧 Faca</div><img src="${order.imagemFaca}" alt="Faca" style="max-height:220px;border:1px solid #ddd;border-radius:8px;"></div>`:''}
-                                ${order.imagemArte?`<div class="print-image" style="text-align:center;"><div style="font-size:12px;margin-bottom:4px;">🎨 Arte</div><img src="${order.imagemArte}" alt="Arte" style="max-height:220px;border:1px solid #ddd;border-radius:8px;"></div>`:''}
-                            </div>
-                        </div>`:`<div></div>`}
+                    <div style="margin:15px 0;">
+                        <h3 style="color:#2c3e50;margin-bottom:12px;font-size:16px;text-align:center;">📏 ESPECIFICAÇÕES</h3>
+                        <table style="width:100%;border-collapse:collapse;max-width:600px;margin:0 auto;">
+                            <tr style="border-bottom:1px solid #ddd;"><td style="padding:8px 0;font-weight:bold;color:#333;">Medidas da Folha Impressa:</td><td style="padding:8px 0;color:#333;">${order.medidasFolha}</td></tr>
+                            <tr style="border-bottom:1px solid #ddd;"><td style="padding:8px 0;font-weight:bold;color:#333;">Quantidade de impressão:</td><td style="padding:8px 0;color:#333;">${parseInt(order.quantidade).toLocaleString()}</td></tr>
+                            <tr style="border-bottom:1px solid #ddd;"><td style="padding:8px 0;font-weight:bold;color:#333;">Quantidade Folhas/Resma:</td><td style="padding:8px 0;color:#333;">${order.folhasResma||'-'}</td></tr>
+                            <tr style="border-bottom:1px solid #ddd;"><td style="padding:8px 0;font-weight:bold;color:#333;">Tipo de Papel:</td><td style="padding:8px 0;color:#333;">${order.tipoPapel}</td></tr>
+                            <tr style="border-bottom:1px solid #ddd;"><td style="padding:8px 0;font-weight:bold;color:#333;">Gramatura:</td><td style="padding:8px 0;color:#333;">${order.gramatura}</td></tr>
+                            <tr style="border-bottom:1px solid #ddd;"><td style="padding:8px 0;font-weight:bold;color:#333;">Impressão:</td><td style="padding:8px 0;color:#333;">${order.impressao}</td></tr>
+                        </table>
                     </div>
 
-                    <div style="margin:8px 0;">
-                        <h3 style="color:#2c3e50;margin-bottom:6px;font-size:14px;">🎨 Acabamento</h3>
-                        <div style="background:#f8f9fa;padding:10px;border-radius:8px;border-left:4px solid #667eea;">
-                            <pre style="white-space:pre-wrap;margin:0;font-size:13px;line-height:1.45;color:#333;">${order.acabamento}</pre>
+                    ${order.imagemFaca||order.imagemArte?`
+                    <div style="margin:25px 0;">
+                        <h3 style="color:#2c3e50;margin-bottom:15px;font-size:16px;text-align:center;">🖼️ IMAGENS</h3>
+                        <div class="print-images" style="display:grid;grid-template-columns:1fr 1fr;gap:20px;margin:0;">
+                            ${order.imagemFaca?`<div class="print-image" style="text-align:center;"><div style="font-size:14px;margin-bottom:8px;font-weight:bold;">🔧 Faca</div><img src="${order.imagemFaca}" alt="Faca" style="max-height:350px;max-width:100%;border:2px solid #ddd;border-radius:10px;"></div>`:''}
+                            ${order.imagemArte?`<div class="print-image" style="text-align:center;"><div style="font-size:14px;margin-bottom:8px;font-weight:bold;">🎨 Arte</div><img src="${order.imagemArte}" alt="Arte" style="max-height:350px;max-width:100%;border:2px solid #ddd;border-radius:10px;"></div>`:''}
                         </div>
-                    </div>
-
-                    <div style="margin:8px 0;">
-                        <h3 style="color:#2c3e50;margin-bottom:6px;font-size:14px;">  Observação</h3>
-                        <div style="background:#f8f9fa;padding:10px;border-radius:8px;border-left:4px solid #667eea;">
-                            <pre style="white-space:pre-wrap;margin:0;font-size:13px;line-height:1.45;color:#333;">${order.descricaoEmbalagens}</pre>
-                        </div>
-                    </div>
+                    </div>`:`<div></div>`}
                 `;
                 document.getElementById('printContent').innerHTML=printHTML;
                 document.getElementById('printModal').style.display='block';
