--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
     <body>
         <div class="container">
             <div class="header">
-                <h1>🏭 Sistema de Ordem de Produção</h1>
+                <h1>🏭 Sistema de Ordem de Produção Gráfica</h1>
                 <p>Gestão Completa de Embalagens em Papel Cartão</p>
             </div>
 
